2009-01-31  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/ore.spad.pamphlet: Fix right multiplication by an
	element of the coefficient domain for
	SparseUnivariateSkewPolynomial. Previously it was inherited from
	SparseUnivariatePolynomial and thus (wrongly) commutative.

2009-01-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/property.lisp: Disable transforminng '^'
	into negation in the parser.

2009-01-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix bootstrap of GCDBAS.
	* src/algebra/Makefile.in: Add GCDBAS to BADSPAD.

2009-01-28  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/lodo.spad.pamphlet: killer missed return statement
	and would therefore always exit with no relations found

2009-01-26  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/input/mantepse.input.pamphlet: add currently failing test
	for finding homogeneous holonomic differential equation for x^2

2009-01-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Do not add '-lutil' to link flags when
	openpty is in libc.

2009-01-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* INSTALL: Update.

2009-01-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Check for openpty first in libc.

2009-01-24  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/rec.spad.pamphlet: fix output bug when all initial
	values are zero

	* src/algebra/rec.spad.pamphlet: cleanup output of ADEs: do not
	show zero coefficients in series expansion

2009-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Check for openpty also in libbsd.

2009-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* INSTALL: Update.

2009-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/hyper/pages/releaseNotes.ht: Update for 1.0.5.

2009-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad.pamphlet: integrate(): Temporarly
	disable fix for issue 436.

2009-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
