@@ -1,3 +1,9 @@
+2009-02-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Better configure.
+	* config.lisp: New file.
+	configure.ac: Use it to detect Lisp.
+
 2009-01-31  Ralf Hemmecke  <ralf@hemmecke.de>
 
 	* src/algebra/ore.spad.pamphlet: Fix right multiplication by an
